authentication-build-4. openapi 적용