@@ -2,11 +2,36 @@ plugins {
     id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
-group = 'com.cho'
+group = 'com.cho.ecommerce'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+swaggerSources {
+//    def typeMappings = 'URI=URI, BigDecimal=BigDecimal, EntityModel=EntityModel'
+//    def importMappings = 'URI=java.net.URI, BigDecimal=java.math.BigDecimal, EntityModel=org.springframework.hateoas.EntityModel'
+    ecommerce {
+        def apiYaml = "${rootDir}/src/main/resources/api/openapi.yaml"
+        def configJson = "${rootDir}/src/main/resources/api/config.json"
+        inputFile = file(apiYaml)
+        def ignoreFile = file("${rootDir}/src/main/resources/api/.openapi-generator-ignore")
+        code {
+            language = 'spring'
+            configFile = file(configJson)
+            rawOptions = ['--ignore-file-override', ignoreFile] as List<String>
+            components = [models: true, apis: true, supportingFiles: 'ApiUtil.java']
+            //templateDir = file("${rootDir}/src/main/resources/templates")
+            //dependsOn validation // Should be uncommented once plugin starts supporting OA 3 validation
+        }
+    }
+}
+
+compileJava.dependsOn swaggerSources.ecommerce.code
+sourceSets.main.java.srcDir "${swaggerSources.ecommerce.code.outputDir}/src/main/java"
+sourceSets.main.resources.srcDir "${swaggerSources.ecommerce.code.outputDir}/src/main/resources"
+
 
 configurations {
     compileOnly {
@@ -19,6 +44,16 @@ repositories {
 }
 
 dependencies {
+    // OpenAPI Starts
+    swaggerCodegen 'org.openapitools:openapi-generator-cli:4.3.1'
+    //compile 'io.swagger.core.v3:swagger-annotations:2.1.5'
+    compileOnly 'io.swagger:swagger-annotations:1.6.2'
+    compileOnly 'org.springframework.boot:spring-boot-starter-validation'
+    compileOnly 'org.openapitools:jackson-databind-nullable:0.2.1'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+//    implementation 'org.springframework.boot:spring-boot-starter-hateoas' //TODO - hateoas
+    // OpenAPI Ends
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -36,5 +71,6 @@ dependencies {
 }
 
 test {
+    jvmArgs '--enable-preview'
     useJUnitPlatform()
 }
